namespace SEM5_PI_WEBAPI.Domain.VesselsTypes
{
    public class IVesselTypeRepository
    {
    
    }
}

